duchain/expressionvisitor.h
@@ -115,6 +115,7 @@ class KDEVPYTHONDUCHAIN_EXPORT ExpressionVisitor : public AstDefaultVisitor
         KDevelop::AbstractType::Ptr lastType() const { return m_lastType; }
         KDevelop::DeclarationPointer lastDeclaration() const { return m_lastAccessedDeclaration; }
         template<typename T> static TypePtr<T> typeObjectForIntegralType(QString typeDescriptor, DUContext* ctx);
+        void setTypesForEventualCall(DeclarationPointer eventualFunction, AttributeAst* node);
     private:
         static QHash<KDevelop::Identifier, KDevelop::AbstractType::Ptr> s_defaultTypes;
         
